--- a/dnevnik/10b.html
+++ b/dnevnik/10b.html
@@ -351,7 +351,10 @@
             if (!subject || subject === 'Нет урока' || subject === 'Нет ДЗ') return 'default-pastel';
 
             const subjectLower = subject.toLowerCase();
-             if (subjectLower.includes('русский') || subjectLower.includes('английский')) {
+             if (!subject || subject === 'Нет урока') return 'default-pastel';
+
+            const subjectLower = subject.toLowerCase();
+            if (subjectLower.includes('русский') || subjectLower.includes('английский')) {
                 return 'red-pastel';
             } else if (
                 subjectLower.includes('алгебра') ||
@@ -389,8 +392,9 @@
                 subjectLower.includes('обзр')
             ) {
                 return 'purple-pastel';
+            }
+            return 'default-pastel';
         }
-
         async function fetchSchedule(url) {
             try {
                 const response = await fetch(url);
