--- a/dnevnik/10b.html
+++ b/dnevnik/10b.html
@@ -351,9 +351,6 @@
             if (!subject || subject === 'Нет урока' || subject === 'Нет ДЗ') return 'default-pastel';
 
             const subjectLower = subject.toLowerCase();
-             if (!subject || subject === 'Нет урока') return 'default-pastel';
-
-            const subjectLower = subject.toLowerCase();
             if (subjectLower.includes('русский') || subjectLower.includes('английский')) {
                 return 'red-pastel';
             } else if (
@@ -362,14 +359,12 @@
                 subjectLower.includes('вис') ||
                 subjectLower.includes('информатика') ||
                 subjectLower.includes('физика') ||
-                subjectLower.includes('электив по информатике')
+                subjectLower.includes('огэ по математике')
             ) {
                 return 'blue-pastel';
             } else if (
                 subjectLower.includes('литература') ||
-                subjectLower.includes('проектная деятельность') ||
-                subjectLower.includes('электив по русскому') ||
-                subjectLower.includes('электив по литературе')
+                subjectLower.includes('проектная деятельность')
             ) {
                 return 'yellow-pastel';
             } else if (
@@ -377,8 +372,7 @@
                 subjectLower.includes('обществознание') ||
                 subjectLower.includes('разговоры о важном') ||
                 subjectLower.includes('классный час') ||
-                subjectLower.includes('профориентация') ||
-                subjectLower.includes('электив по обществознанию')
+                subjectLower.includes('профориентация')
             ) {
                 return 'orange-pastel';
             } else if (
@@ -395,6 +389,7 @@
             }
             return 'default-pastel';
         }
+
         async function fetchSchedule(url) {
             try {
                 const response = await fetch(url);
