--- a/dnevnik/10b.html
+++ b/dnevnik/10b.html
@@ -359,12 +359,14 @@
                 subjectLower.includes('вис') ||
                 subjectLower.includes('информатика') ||
                 subjectLower.includes('физика') ||
-                subjectLower.includes('огэ по математике')
+                subjectLower.includes('электив по информатике')
             ) {
                 return 'blue-pastel';
             } else if (
                 subjectLower.includes('литература') ||
-                subjectLower.includes('проектная деятельность')
+                subjectLower.includes('проектная деятельность') ||
+                subjectLower.includes('электив по русскому') ||
+                subjectLower.includes('электив по литературе')
             ) {
                 return 'yellow-pastel';
             } else if (
