--- a/dnevnik/10a.html
+++ b/dnevnik/10a.html
@@ -319,7 +319,7 @@
     <script>
         // URL для основного расписания и домашнего задания
         const MAIN_SHEET_URL = 'https://docs.google.com/spreadsheets/d/1XRQTsELDzrNfuiF5YhXHdzginnTiFP9CSyEPJfMrseI/export?format=csv&gid=0';
-        const HOMEWORK_SHEET_URL = '';
+        const HOMEWORK_SHEET_URL = 'https://docs.google.com/spreadsheets/d/1kh7iEQNmZKF0fU5u_nisE9tPSMuea3tG8HXV9Xs4Exs/export?format=csv&gid=0';
 
         // Расписание звонков
         const SCHEDULE_WEEKDAYS = {
@@ -720,4 +720,5 @@
     </script>
 </body>
 </html>
+
 
